--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "abp-ng2-module": "^6.2.0",
     "abp-web-resources": "^5.3.0",
     "admin-lte-css-only": "^3.1.0",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.2.1",
     "famfamfam-flags": "^1.0.0",
+    "jquery": "^3.6.1",
     "lodash-es": "^4.17.15",
-    "moment": "2.24.0",
-    "moment-timezone": "0.5.33",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "ngx-bootstrap": "^5.6.1",
     "ngx-pagination": "^5.0.0",
     "push.js": "1.0.12",
@@ -44,7 +46,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.5",
+    "@angular-devkit/build-angular": "^12.2.18",
     "@angular/cli": "^12.0.5",
     "@angular/compiler-cli": "^12.0.5",
     "@angularclass/hmr": "^2.1.3",
@@ -52,7 +54,7 @@
     "@types/lodash-es": "^4.17.3",
     "@types/moment-timezone": "^0.5.30",
     "@types/node": "^13.13.4",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
@@ -66,7 +68,7 @@
     "ts-node": "^8.10.1",
     "tslint": "~6.1.0",
     "typescript": "4.2.4",
-    "webpack-bundle-analyzer": "^3.7.0"
+    "webpack-bundle-analyzer": "^4.6.1"
   },
   "angular-cli": {}
 }
