--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "ng test"
   },
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^12.0.5",
     "@angular/cdk": "^12.0.0",
     "@angular/common": "^12.0.5",
@@ -25,9 +26,11 @@
     "@angular/router": "^12.0.5",
     "@aspnet/signalr": "^1.1.4",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@types/google-maps": "^3.2.3",
     "abp-ng2-module": "^6.2.0",
     "abp-web-resources": "^5.3.0",
     "admin-lte-css-only": "^3.1.0",
+    "agm-direction": "^0.8.10",
     "bootstrap": "^5.2.2",
     "core-js": "^3.2.1",
     "famfamfam-flags": "^1.0.0",
@@ -50,10 +53,11 @@
     "@angular/cli": "^12.0.5",
     "@angular/compiler-cli": "^12.0.5",
     "@angularclass/hmr": "^2.1.3",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/lodash-es": "^4.17.3",
     "@types/moment-timezone": "^0.5.30",
-    "@types/node": "^13.13.4",
+    "@types/node": "^13.13.52",
     "codelyzer": "^0.0.28",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
